; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-qsv11/extr_obs-qsv11.c_obs_qsv_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-qsv11/extr_obs-qsv11.c_obs_qsv_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_qsv = type { i32, i32 }

@g_QsvCs = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Failed to reconfigure: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @obs_qsv_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @obs_qsv_update(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.obs_qsv*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.obs_qsv*
  store %struct.obs_qsv* %10, %struct.obs_qsv** %6, align 8
  %11 = load %struct.obs_qsv*, %struct.obs_qsv** %6, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @update_settings(%struct.obs_qsv* %11, i32* %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %34

16:                                               ; preds = %2
  %17 = call i32 @EnterCriticalSection(i32* @g_QsvCs)
  %18 = load %struct.obs_qsv*, %struct.obs_qsv** %6, align 8
  %19 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.obs_qsv*, %struct.obs_qsv** %6, align 8
  %22 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %21, i32 0, i32 0
  %23 = call i32 @qsv_encoder_reconfig(i32 %20, i32* %22)
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* %8, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %16
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @warn(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %27)
  br label %29

29:                                               ; preds = %26, %16
  %30 = call i32 @LeaveCriticalSection(i32* @g_QsvCs)
  %31 = load i32, i32* %8, align 4
  %32 = icmp eq i32 %31, 0
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %3, align 4
  br label %35

34:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %34, %29
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @update_settings(%struct.obs_qsv*, i32*) #1

declare dso_local i32 @EnterCriticalSection(i32*) #1

declare dso_local i32 @qsv_encoder_reconfig(i32, i32*) #1

declare dso_local i32 @warn(i8*, i32) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
